--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -5,9 +5,24 @@ input {
     line-height: 3rem;
     border: 0px none;
     border-radius: 5px;
-    padding-left: 2%;
+    padding-left: 4.5%;
     width: 100%;
     box-shadow: 5px 5px 15px -8px #ABABAB;
+    background: url('../../images/search.png');
+    background-size: 25px 25px;
+    background-position: 12px 12px;
+    background-repeat: no-repeat;
+    background-color: white;
+}
+
+input[type="search"]::-webkit-search-cancel-button {
+    -webkit-appearance: none;
+    height: 20px;
+    width: 20px;
+    padding-right: 2%;
+    background: url('../../images/grey_x.png');
+    background-size: 20px 20px;
+    background-repeat: no-repeat;
 }
 
 input:focus{
