--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: left;
-  padding: 4% 6% 4% 6%; 
+  padding: 3% 6% 3% 6%;
 }
 
 body {
@@ -15,6 +15,11 @@ h1 {
 }
 
 h2 {
+  font-size: 1.5rem;
+  color: #333333;
+}
+
+h3 {
   font-size: 1.25rem;
   font-weight: 600;
   color: #ABABAB;
