--- a/src/components/ShoppiesApp/ShoppiesApp.css
+++ b/src/components/ShoppiesApp/ShoppiesApp.css
@@ -34,3 +34,33 @@ h1 {
     margin-left: calc(4%);
     padding-top: calc(1%);
 }
+
+.loading {
+    font-size: 1.5rem;
+    text-align: center;
+    font-family: 'Inter', sans-serif;
+    padding-top: 25%;
+    font-weight: 500;
+    color: #333333;
+}
+
+.loading:after {
+    overflow: hidden;
+    vertical-align: bottom;
+    -webkit-animation: ellipsis steps(4, end) 500ms infinite;
+    animation: ellipsis steps(4, end) 500ms infinite;
+    content: "\2026";
+    width: 0px;
+}
+
+@keyframes ellipsis {
+    to {
+        width: 1.25em;
+    }
+}
+
+@-webkit-keyframes ellipsis {
+    to {
+        width: 1.25em;
+    }
+}
