--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -23,6 +23,7 @@ input[type="search"]::-webkit-search-cancel-button {
     background: url('../../images/grey_x.png');
     background-size: 20px 20px;
     background-repeat: no-repeat;
+    cursor: pointer;
 }
 
 input:focus {
