--- a/src/components/MovieCard/MovieCard.css
+++ b/src/components/MovieCard/MovieCard.css
@@ -30,11 +30,11 @@
     content: '';
     background-color: #ffce66;
     position: absolute;
-    left: 50%;
+    left: 100%;
     top: 50%;
     text-align: left;
     transform: translate(-50%, -50%) scale3d(1, 1, 1);
-    transition: all 300ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: all 400ms cubic-bezier(0.4, 0, 0.2, 1);
     opacity: 0;
     z-index: -1;
 }
@@ -65,7 +65,7 @@
 }
 
 .input-group input:checked~label:before {
-    transform: translate(-50%, -50%) scale3d(75, 75, 1);
+    transform: translate(-50%, -50%) scale3d(200, 200, 1);
     opacity: 1;
 }
 
@@ -140,10 +140,13 @@ img {
 }
 
 .card-poster {
-    float: left;
-    margin-left: 5%;
+    width: 40%;
+    float: right;
 }
 
 .card-poster img {
-    top: -200%;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    margin: auto;
 }
